<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_pesquisa"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_pesquisa"
        android:enabled="true"/>

    <item android:id="@+id/action_ordenar"
        android:icon="@drawable/ic_reorder_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_ordenar"
        android:enabled="true"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:enabled="true"
        android:orderInCategory="200"
        android:title="@string/action_login"
        app:showAsAction="never" />

</menu>